[gd_scene load_steps=6 format=3 uid="uid://b2se1l330qmln"]

[ext_resource type="Theme" uid="uid://bko0q7gp1hwjp" path="res://assets/themes/dracula.tres" id="1_pvtqf"]
[ext_resource type="Script" path="res://core/ui/menu/navigation/top_bar.gd" id="2_s10b7"]
[ext_resource type="PackedScene" uid="uid://bx0fnuxd8mm51" path="res://core/ui/components/search_bar.tscn" id="3_4ldf8"]
[ext_resource type="Texture2D" uid="uid://djaa45t1ecopj" path="res://assets/icons/wifi.svg" id="3_xu4r1"]
[ext_resource type="Texture2D" uid="uid://djy4rejy21s6g" path="res://icon.svg" id="4_lv4ws"]

[node name="TopBar" type="Control" groups=["menu", "top_bar"]]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
theme = ExtResource("1_pvtqf")
script = ExtResource("2_s10b7")

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.611765)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SearchBar" parent="MarginContainer/HBoxContainer" groups=["global_search_bar"] instance=ExtResource("3_4ldf8")]
unique_name_in_owner = true
layout_mode = 2

[node name="NetworkIcon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("3_xu4r1")
stretch_mode = 4

[node name="BatteryLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100%"

[node name="TimeLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "12:00pm"

[node name="ProfileIcon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_lv4ws")
expand_mode = 1
stretch_mode = 4
